<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:paddingTop="16dp"
        android:gravity="center_horizontal">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:strokeColor="?dividerColor"
            android:scaleType="centerInside"
            app:strokeWidth="1dp"
            app:shapeAppearance="@style/Avatar"
            app:srcCompat="@drawable/ic_nike_logo"/>
        <TextView
            android:id="@+id/TV_username_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="hsn@gmail.com"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="32dp"
            android:textAppearance="?textAppearanceHeadline6"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:divider="@drawable/divider"
            android:showDividers="middle|end|beginning"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/TV_go_to_favoriteList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProfileStyleTExtLink"
                android:background="?selectableItemBackground"
                android:text="@string/favoriteList"
                app:drawableStartCompat="@drawable/ic_favorites24"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProfileStyleTExtLink"
                android:text="@string/orderHistory"
                app:drawableStartCompat="@drawable/ic_history_order"/>
            <TextView
                android:id="@+id/TV_sign_in_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProfileStyleTExtLink"
                tools:text="@string/textBTNLoginCreate"
                app:drawableStartCompat="@drawable/ic_sign_in"/>
        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>