<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context=".feature.main.shiping.ShippingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="?android:colorBackground"
        app:elevation="8dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="40dp"
                android:text="@string/shippingDetail"
                android:textAppearance="?textAppearanceHeadline6" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_back" />
        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_shipping_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TI_shipping_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:hint="@string/name"
                    android:paddingHorizontal="8dp"
                    android:textColorHint="?android:textColorSecondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_shipping_LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginEnd="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusTopStart="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TI_shipping_LastName"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/lastName"
                    android:paddingHorizontal="8dp"
                    android:textColorHint="?android:textColorSecondary"
                    android:textSize="14dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_shipping_postalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusTopStart="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TI_shipping_postalCode"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/postalCode"
                    android:textSize="14dp"

                    android:paddingHorizontal="8dp"
                    android:textColorHint="?android:textColorSecondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_shipping_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusTopStart="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TI_shipping_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/phoneNumber"
                    android:textSize="14dp"

                    android:paddingHorizontal="8dp"
                    android:textColorHint="?android:textColorSecondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_shipping_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TI_shipping_address"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/address"
                    android:paddingHorizontal="8dp"
                    android:textSize="14dp"
                    android:textColorHint="?android:textColorSecondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <include
                android:id="@+id/purchase_view_shipping"
                layout="@layout/item_purchase_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mBTN_online_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="8dp"
                    android:backgroundTint="?colorSecondary"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/onlinePayment"
                    android:textAppearance="?textAppearanceBody1"
                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mBTN_cash_on_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="8dp"
                    android:backgroundTint="?colorSecondary"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/localPayment"
                    android:textAppearance="?textAppearanceBody1"
                    app:cornerRadius="8dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>