<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="16dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceHeadline6"
        android:layout_marginStart="16dp"
        android:textColor="?android:textColorSecondary"
        android:text="@string/purchaseDetail"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:cardElevation="12dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="8dp"
        android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="start|center"
                   android:layout_marginVertical="4dp"
                   android:layout_marginStart="16dp"
                   android:textAppearance="?textAppearanceBody1"
                   android:text="@string/totalPrice"/>
               <TextView
                   android:id="@+id/TV_totalPurchase"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end|center"
                   android:layout_marginVertical="4dp"
                   android:layout_marginEnd="16dp"
                   android:textAppearance="?textAppearanceHeadline6"
                   tools:text="216516"/>
               <View
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:layout_gravity="bottom"
                   android:background="?android:textColorSecondary"/>
           </FrameLayout>
           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="start|center"
                   android:layout_marginVertical="4dp"
                   android:layout_marginStart="16dp"
                   android:textAppearance="?textAppearanceBody1"
                   android:text="@string/shippingPrice"/>
               <TextView
                   android:id="@+id/TV_shippingPrice"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end|center"
                   android:layout_marginVertical="4dp"
                   android:layout_marginEnd="16dp"
                   android:textAppearance="?textAppearanceHeadline6"
                   tools:text="216516"/>
               <View
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:layout_gravity="bottom"
                   android:background="?android:textColorSecondary"/>
           </FrameLayout>
           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="start|center"
                   android:layout_marginVertical="4dp"
                   android:layout_marginStart="16dp"
                   android:textAppearance="?textAppearanceBody1"
                   android:text="@string/payAblePrice"/>
               <TextView
                   android:id="@+id/TV_payAblePrice"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end|center"
                   android:layout_marginVertical="4dp"
                   android:layout_marginEnd="16dp"
                   android:textAppearance="?textAppearanceHeadline6"
                   tools:text="216516"/>
               <View
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:layout_gravity="bottom"
                   android:background="?android:textColorSecondary"/>
           </FrameLayout>

       </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>